# flatten_iterator

./: .gitmodules  CMakeLists.txt  CMakePresets.json
benchmarks/: CMakeLists.txt
include/flatten_iterator/: flatten_iterator.h  range_traits.h
include/flatten_view/: flatten_view.h  range_traits.h
include/flatten_view/details/: basic_range_traits.h  iter_storage.h  type_traits.h
src/: CMakeLists.txt
src/generator/: CMakeLists.txt
src/generator/include/flatten_iterator/generator/: generator.h
src/generator/include/flatten_view/generator/: generator.h
tests/: CMakeLists.txt  basic_range_traits_test.cpp  common.h  flatten_iterator_test.cpp  flatten_view_test.cpp  iter_storage_test.cpp  range_traits_test.cpp
